fix: fix the overflow in overview-text

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,8 @@
 
 body {
   font-family: Oxygen;
-  max-width: 1440px;
-  font-size: 14px;
-  margin: auto;
+  background: black;
+  /* max-width: 1440px; */
+  font-size: 16px;
+  /* margin: auto; */
 }
